--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@ hello
 now we start  to add  git modifications to change outher
 
 now git literly started on me 
+ now i make change with vs code on inside new branch
+ 
