nerge after edit in new branch

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ now we start  to add  git modifications to change outher
 
 now git literly started on me 
  now i make change with vs code on inside new branch
- 
+ a edit inside newbranch after merge
