--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ now git literly started on me
  now the edit for master
 =======
  a edit inside newbranch after merge
->>>>>>> new-branch
+..EDIT FROM MASTER>>>>>>> new-branch
