edit from terminal to github

--- a/index.html
+++ b/index.html
@@ -8,3 +8,7 @@ a edit inside newbranch after merge
 ..EDIT FROM MASTER
 ..EDIT FROM NEW BRANCH
 edited file using github
+
+
+why github edit now showing inside terminal
+ (edit from terminal to github)
